# perfaware

./: README.md  perfaware.10x
8086/: Op.hpp  opcodes.inline
part_1/: bloat.hpp  build.bat  clean.bat  debug.rdbg  meson.build  sim_8086.c  sim_8086.cpp  test.bat
part_1/tests/: listing_0038_many_register_mov.out.asm  listing_0039_more_movs.asm.out.asm
